--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "twitter/bootstrap": "^4.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -56,6 +57,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+	"post-update-cmd": [
+		"mkdir -p public/vendor/bootstrap",
+		"cp -R vendor/twitter/bootstrap/dist public/vendor/bootstrap"
+	]
     }
 }
