Added datatables to composer

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "datatables/datatables": "^1.10",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -59,8 +60,9 @@
             "@php artisan key:generate --ansi"
         ],
 	"post-update-cmd": [
-		"mkdir -p public/vendor/bootstrap",
-		"cp -R vendor/twitter/bootstrap/dist public/vendor/bootstrap"
+		"mkdir -p public/vendor/bootstrap public/vendor/datatables",
+		"cp -R vendor/twitter/bootstrap/dist public/vendor/bootstrap",
+		"cp -R vendor/datatables/datatables/media/* public/vendor/datatables"
 	]
     }
 }
