--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ npm-debug.log
 yarn-error.log
 .env.example
 public/vendor/*
+resources/views/home.blade.php
+resources/views/home.blade.php
+resources/views/home.blade.php
+resources/views/layouts/app.blade.php
